--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <iframe title="President's List" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=233db56c-93ff-4329-9b04-9f78aa65b3e3&autoAuth=true&ctid=b8e8d71a-947d-41dd-81dd-8401dcc51007" frameborder="0" allowFullScreen="true">
-        </iframe>
+        <iframe title="College List" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiODhjMTA1ODAtMWEzOS00ODA3LWJhMzgtZjQ1MjA1MDM5YzExIiwidCI6ImI4ZThkNzFhLTk0N2QtNDFkZC04MWRkLTg0MDFkY2M1MTAwNyIsImMiOjF9" frameborder="0" allowFullScreen="true"></iframe>
         <script src="" async defer></script>
     </body>
 </html>
