--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <iframe title="College List" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiODhjMTA1ODAtMWEzOS00ODA3LWJhMzgtZjQ1MjA1MDM5YzExIiwidCI6ImI4ZThkNzFhLTk0N2QtNDFkZC04MWRkLTg0MDFkY2M1MTAwNyIsImMiOjF9" frameborder="0" allowFullScreen="true"></iframe>
+        <iframe title="Report Section" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNzM1ZDg5NjAtZmU5Yy00ODczLWJlNzAtNjMzMDVlMTFjYjgwIiwidCI6ImI4ZThkNzFhLTk0N2QtNDFkZC04MWRkLTg0MDFkY2M1MTAwNyIsImMiOjF9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
+        
         <script src="" async defer></script>
     </body>
 </html>
