--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
         <title>Power BI Test</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <iframe title="Report Section" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNzM1ZDg5NjAtZmU5Yy00ODczLWJlNzAtNjMzMDVlMTFjYjgwIiwidCI6ImI4ZThkNzFhLTk0N2QtNDFkZC04MWRkLTg0MDFkY2M1MTAwNyIsImMiOjF9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
-        
+        <iframe title="President's and Dean's Lists" width="500" height="1024" src="https://app.powerbi.com/view?r=eyJrIjoiNzM1ZDg5NjAtZmU5Yy00ODczLWJlNzAtNjMzMDVlMTFjYjgwIiwidCI6ImI4ZThkNzFhLTk0N2QtNDFkZC04MWRkLTg0MDFkY2M1MTAwNyIsImMiOjF9&navContentPaneEnabled=false" frameborder="0" allowFullScreen="true"></iframe>
         <script src="" async defer></script>
     </body>
 </html>
